--- a/frontend/public/locales/ru/translation.json
+++ b/frontend/public/locales/ru/translation.json
@@ -13,6 +13,7 @@
     "filter": "Фильтр",
     "close": "Закрыть",
     "submit": "Отправить",
+    "ok": "ОК",
     "back": "Назад",
     "next": "Далее",
     "confirm": "Подтвердить",
@@ -21,6 +22,7 @@
     "details": "Подробности",
     "minutes": "минуты",
     "completed": "Завершено",
+    "notAvailable": "Н/Д",
     "sunday": "Воскресенье",
     "monday": "Понедельник",
     "tuesday": "Вторник",
@@ -325,7 +327,8 @@
   },
   "admin": {
     "membership": {
-      "title": "Управление членством",
+  "title": "Управление членством",
+  "back": "← Назад в ресепшен",
       "plans": "Планы",
       "subscriptions": "Подписки",
       "companies": "Компании",
@@ -408,7 +411,249 @@
       "employeeCount": "Количество сотрудников",
       "accessDenied": "Доступ запрещен",
       "noPermission": "У вас нет разрешения на доступ к управлению членством.",
-      "contactAdmin": "Пожалуйста, свяжитесь с администратором, если вы считаете, что это ошибка."
+      "contactAdmin": "Пожалуйста, свяжитесь с администратором, если вы считаете, что это ошибка.",
+      "stats": {
+        "monthlyRevenue": "Ежемесячный доход"
+      },
+      "filters": {
+        "allTypes": "Все типы",
+        "companyPlans": "Корпоративные планы",
+        "allStatus": "Все статусы"
+      },
+      "statusLabels": {
+        "expired": "Истекло",
+        "suspended": "Приостановлено",
+        "paid": "Оплачено",
+        "overdue": "Просрочено"
+      },
+      "countdown": {
+        "expired": "⚠️ СРОК ИСТЁК",
+        "days": "⏱️ {{count}} дн."
+      },
+      "planCard": {
+        "discount": "💰 Скидка {{discount}}%",
+        "features": "✅ Особенности:",
+        "limitations": "⚠️ Ограничения:",
+        "perDuration": "/ {{duration}}"
+      },
+      "planNames": {
+        "monthlyUnlimited": "Ежемесячный безлимит",
+        "monthlyLimited": "Ежемесячный с лимитом",
+        "singleSession": "Разовое посещение"
+      },
+      "planDescriptions": {
+        "monthlyUnlimited": "Безлимитный доступ на месяц",
+        "monthlyLimited": "Месячный тариф с лимитом — 12 посещений",
+        "singleSession": "Разовое посещение зала (оплата за вход)"
+      },
+      "planFeatures": {
+        "unlimitedGymVisits": "Безлимитные посещения зала",
+        "accessAllClasses": "Доступ ко всем тренировкам",
+        "lockerPrivileges": "Использование шкафчиков",
+        "guestPrivileges": "Гостевые визиты (2 раза в месяц)",
+        "twelveVisitsPerMonth": "12 посещений в месяц",
+        "flexibleSchedule": "Гибкий график",
+        "accessAllEquipment": "Доступ ко всему оборудованию",
+        "validOneDay": "Действует один день"
+      },
+      "planLimitations": {
+        "monthlyCommitment": "Ежемесячные обязательства",
+        "autoRenews": "Автоматическое продление",
+        "visitQuotaApplies": "Действует лимит посещений",
+        "noRollover": "Неиспользованные посещения не переносятся",
+        "singleEntryOnly": "Только одно посещение"
+      },
+      "durationDisplay": {
+        "days_one": "{{count}} день",
+        "days_few": "{{count}} дня",
+        "days_many": "{{count}} дней",
+        "days_other": "{{count}} дней",
+        "months_one": "{{count}} месяц",
+        "months_few": "{{count}} месяца",
+        "months_many": "{{count}} месяцев",
+        "months_other": "{{count}} месяцев"
+      },
+      "subscriptionsSection": {
+        "memberInfo": "👤 Информация об участнике",
+        "subscriptionDetails": "📋 Детали подписки",
+        "usageStats": "📊 Статистика использования"
+      },
+      "dayCount_one": "{{count}} день",
+      "dayCount_few": "{{count}} дня",
+      "dayCount_many": "{{count}} дней",
+      "dayCount_other": "{{count}} дней",
+      "dialogs": {
+        "titles": {
+          "validation": "⚠️ Ошибка проверки",
+          "duplicate": "⚠️ План уже существует",
+          "updateFailed": "❌ Не удалось обновить",
+          "success": "✅ Успешно",
+          "creationFailed": "❌ Не удалось создать",
+          "error": "❌ Ошибка",
+          "deletePlan": "🗑️ Удалить план членства",
+          "deleteFailed": "❌ Не удалось удалить",
+          "renewSubscription": "🔄 Продлить подписку",
+          "renewalComplete": "✅ Продление завершено",
+          "renewalFailed": "❌ Продлить не удалось",
+          "suspendSubscription": "⏸️ Приостановить подписку",
+          "suspendSuccess": "✅ Приостановлено",
+          "suspendFailed": "❌ Приостановка не удалась",
+          "cancelSubscription": "🗑️ Отменить подписку",
+          "cancelled": "✅ Отменено",
+          "cancellationFailed": "❌ Отмена не выполнена",
+          "removeCompany": "🗑️ Удалить компанию",
+          "contactCompany": "📞 Связаться с компанией",
+          "changeCompanyStatus": "🔄 Изменить статус ({{status}})",
+          "statusUpdated": "✅ Статус обновлён"
+        },
+        "messages": {
+          "planNameRequired": "Пожалуйста, укажите название плана",
+          "planPriceInvalid": "Пожалуйста, введите корректную цену (больше 0)",
+          "duplicatePlan": "План с названием \"{{name}}\" уже существует. Выберите другое название.",
+          "planUpdateFailed": "Не удалось обновить план: {{error}}\n\nПроверьте подключение и повторите попытку.",
+          "planUpdateSuccess": "План успешно обновлён!",
+          "planCreationFailed": "Не удалось создать план: {{error}}\n\nПроверьте подключение и повторите попытку.",
+          "planCreationSuccess": "План успешно создан!",
+          "genericError": "Произошла непредвиденная ошибка. Попробуйте ещё раз.",
+          "deletePlan": "План: {{name}}\nЦена: {{price}}\nТип: {{type}}\n\n⚠️ ВНИМАНИЕ: Это действие нельзя отменить.\n\nВсе подписки, использующие этот план, будут затронуты. Удалить план?",
+          "deletePlanFailed": "Не удалось удалить план: {{error}}",
+          "deletePlanSuccess": "План успешно удалён!",
+          "subscriptionUpdateSuccess": "Подписка успешно обновлена!",
+          "subscriptionUpdateFailed": "Не удалось обновить подписку:\n\n{{error}}",
+          "subscriptionUpdateError": "Во время обновления подписки произошла непредвиденная ошибка.",
+          "renewSubscriptionConfirm": "Участник: {{member}}\nПлан: {{plan}}\nТекущий статус: {{status}}\nТекущая дата окончания: {{endDate}}\n\nЭто продлит срок действия подписки и, при необходимости, сбросит доступные посещения.\n\nПродолжить продление?",
+          "renewalSuccess": "Подписка успешно продлена!\n\nСрок действия подписки увеличен.",
+          "renewalFailed": "Не удалось продлить подписку:\n\n{{error}}",
+          "renewalError": "Во время продления подписки произошла непредвиденная ошибка.",
+          "suspendSubscriptionConfirm": "Участник: {{member}}\nПлан: {{plan}}\nТекущий статус: {{status}}\n\nПодписка будет временно приостановлена; вы сможете активировать её позже.\n\nУчастник не сможет посещать зал во время приостановки.\n\nПродолжить?",
+          "suspendSuccess": "Подписка успешно приостановлена!\n\nУчастник не сможет посещать зал до повторной активации.",
+          "suspendFailed": "Не удалось приостановить подписку:\n\n{{error}}",
+          "suspendError": "Во время приостановки подписки произошла непредвиденная ошибка.",
+          "cancelSubscriptionConfirm": "Участник: {{member}}\nEmail: {{email}}\nПлан: {{plan}}\nДата начала: {{startDate}}\nДата окончания: {{endDate}}\n\n⚠️ ВНИМАНИЕ: Подписка будет помечена как НЕАКТИВНАЯ.\n\nУчастник немедленно потеряет доступ ко всем преимуществам и залу.\n\nЭто действие можно отменить, создав новую подписку.\n\nВы уверены, что хотите отменить подписку?",
+          "cancellationSuccess": "Подписка успешно отменена!\n\nУчастник больше не имеет доступа к залу.",
+          "cancellationFailed": "Не удалось отменить подписку:\n\n{{error}}",
+          "cancellationError": "Во время отмены подписки произошла непредвиденная ошибка.",
+          "removeCompany": "Удалить компанию {{name}} из списка партнёров?",
+          "contactCompany": "Контакт: {{contact}}\nКомпания: {{company}}\nТелефон: {{phone}}\n\nКак хотите связаться?",
+          "companyStatusChange": "Компания: {{company}}\nТекущий статус: {{currentStatus}}\n\n{{action}}",
+          "companyStatus": {
+            "active": "✅ Активировать партнёрство с компанией?",
+            "pending": "⏳ Перевести партнёрство в статус ожидания?",
+            "suspended": "⏸️ Приостановить партнёрство с компанией?"
+          },
+          "companyStatusUpdated": "Статус компании изменён: {{status}}"
+        },
+        "confirm": {
+          "deletePlan": "Да, удалить",
+          "renew": "Да, продлить",
+          "suspend": "Да, приостановить",
+          "cancelSubscription": "Да, отменить",
+          "keepSubscription": "Нет, оставить",
+          "deleteCompany": "Да, удалить компанию",
+          "contactWhatsApp": "📱 WhatsApp",
+          "contactCall": "☎️ Обычный звонок",
+          "changeStatus": "Да, изменить статус"
+        }
+      },
+      "labels": {
+        "memberManagement": "Управление участниками"
+      },
+      "addSubscriptionModal": {
+        "info": {
+          "noteTitle": "Примечание:",
+          "noteDescription": "Чтобы добавить новую подписку, используйте страницу {{page}} и назначьте участнику план.",
+          "detail": "Это гарантирует корректное сохранение данных участника и платежей."
+        },
+        "quickActions": {
+          "title": "Быстрые действия:",
+          "step1": "✅ Перейдите в {{page}}",
+          "step2": "✅ Выберите участника",
+          "step3": "✅ Нажмите \"Назначить подписку\"",
+          "step4": "✅ Выберите план и задайте даты",
+          "step5": "✅ Подписка появится здесь автоматически"
+        },
+        "buttons": {
+          "goToReception": "📋 Перейти на панель ресепшена"
+        }
+      }
+    },
+    "birthdays": {
+      "back": "← Назад в ресепшен",
+      "title": "🎂 Ближайшие дни рождения",
+      "stats": {
+        "today": "Сегодня",
+        "week": "На этой неделе",
+        "month": "В этом месяце",
+        "total": "Всего впереди"
+      },
+      "filters": {
+        "all": "🗓️ Все ближайшие",
+        "today": "🎉 Сегодня",
+        "week": "📅 Эта неделя",
+        "month": "🗓️ Этот месяц"
+      },
+      "searchPlaceholder": "Поиск по членам...",
+      "noResults": {
+        "title": "Нет ближайших дней рождения",
+        "description": "Для выбранного фильтра дни рождения не найдены."
+      },
+      "status": {
+        "today": "Сегодня!",
+        "tomorrow": "Завтра",
+        "inDays": "Через {{count}} дней"
+      },
+      "age": "{{age}} лет",
+      "labels": {
+        "email": "E-mail:",
+        "phone": "Телефон:",
+        "membership": "Членство:",
+        "memberSince": "Член с:"
+      },
+      "actions": {
+        "sendWish": "🎉 Отправить поздравление",
+        "call": "📞 Позвонить участнику",
+        "email": "📧 Отправить email"
+      },
+      "modal": {
+        "title": "🎉 Отправить поздравление {{name}}",
+        "turning": "{{date}} исполнится {{age}}",
+        "templateLabel": "Шаблон сообщения:",
+        "messageLabel": "Текст поздравления:",
+        "messagePlaceholder": "Напишите здесь поздравление...",
+        "deliveryTitle": "Способы доставки:",
+        "cancel": "Отмена",
+        "confirm": "🎉 Отправить поздравление"
+      },
+      "templateOptions": {
+        "default": "🎉 Стандартное поздравление",
+        "formal": "👔 Официальное поздравление",
+        "casual": "😄 Дружеское и весёлое",
+        "motivational": "💪 Мотивирующее"
+      },
+      "templates": {
+        "default": "🎉 С днём рождения, {{firstName}}! 🎂\n\nЖелаем потрясающего дня, наполненного радостью, смехом и отличными тренировками! Спасибо, что остаётесь частью нашей семьи Viking Hammer.\n\nОтличного праздника! 💪\n\n- Команда Viking Hammer CrossFit",
+        "formal": "Уважаемый(ая) {{firstName}} {{lastName}},\n\nОт имени всей команды Viking Hammer CrossFit поздравляем вас с днём рождения!\n\nМы ценим вашу преданность фитнесу и ваше членство у нас. Пусть этот день будет наполнен тёплыми моментами в кругу семьи и друзей.\n\nС наилучшими пожеланиями,\nКоманда Viking Hammer CrossFit",
+        "casual": "Привет, {{firstName}}! 🎉\n\nСегодня твой день! Надеемся, ты готов отпраздновать его крутыми тренировками и праздничным настроением! 💪\n\nСпасибо, что ты с нами и остаёшься частью нашей команды. Желаем самого классного дня рождения!\n\nУра! 🥳\nТвоя команда Viking Hammer",
+        "motivational": "С днём рождения, {{firstName}}! 🏆\n\nЕщё один год силы и достижений! Твоя преданность тренировкам вдохновляет всех нас.\n\nПусть новый год принесёт ещё больше личных рекордов, побед и покорённых целей!\n\nПродолжай в том же духе! 💪🔥\n\n- Viking Hammer CrossFit"
+      },
+      "delivery": {
+        "email": "📧 Email ({{email}})",
+        "sms": "📱 SMS ({{phone}})",
+        "whatsapp": "💬 WhatsApp ({{phone}})",
+        "inApp": "🔔 Внутри приложения"
+      },
+      "channels": {
+        "email": "Email",
+        "sms": "SMS",
+        "whatsapp": "WhatsApp",
+        "inApp": "В приложении"
+      },
+      "emailSubject": "🎉 С днём рождения, {{firstName}}!",
+      "alerts": {
+        "prepared": "✅ Поздравление подготовлено для каналов: {{channels}}\n\nПожалуйста, проверьте и отправьте сообщение через приложение {{firstChannel}} на вашем устройстве.",
+        "selectOne": "⚠️ Пожалуйста, выберите хотя бы один способ доставки."
+      },
+      "notificationTitle": "🎉 С днём рождения!"
     },
     "reception": {
       "title": "Панель ресепшн",
@@ -457,6 +702,8 @@
         "classDeleted": "Занятие удалено",
         "instructorDeleted": "Инструктор удален",
         "scheduleDeleted": "Расписание удалено",
+        "instructorAssigned": "Инструктор назначен на занятие",
+        "instructorRemoved": "Инструктор удален из занятия",
         "membershipChanged": "членство изменено на",
         "by": "пользователем",
         "member": "Член"
@@ -471,6 +718,8 @@
         "daysAgo": "{{count}} дней назад"
       },
       "noRecentActivity": "Пока нет недавней активности",
+      "page": "Страница",
+      "of": "из",
       "qrPositionText": "Расположите QR-код перед камерой",
       "qrScanner": {
         "title": "Сканер QR-кодов",
